# stitch

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  x86_complex_obf.cc  x86_global_ref.cc  x86_move_fn.cc  x86_move_fn_branching.cc  x86_opaque_pred.cc  x86_shellcode.cc
include/stitch/: errors.h  stitch.h  utils.h
include/stitch/binary/: binary.h  pe.h  shellcode.h
include/stitch/misc/: errors.h  utils.h
src/: pe.cc  shellcode.cc  x86.cc
src/binary/: pe.cc
unittests/: CMakeLists.txt
unittests/binary/: CMakeLists.txt  pe_parse_test.cc  pe_rebuild_test.cc
